Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			}
 
 			.button1:hover {
-				background-color: black;
+				background-color: grey;
 				color: white;
 			}
 
@@ -43,7 +43,7 @@
 			}
 
 			.button2:hover {
-				background-color: black;
+				background-color: grey;
 				color: white;
 			}
 			body {
