Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<body>
 		<button class="button button1">About Me</button>
 		<button class="button button2">Experience</button>
-		<h1 style="color: whitesmoke;">Hi, I am Bert</h1>
+		<h1 style="color: whitesmoke;">Hi, I am Aditya</h1>
 		<img
 			height="200px"
 			src="/assets/images/person.png"
