Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 				text-align: center;
 				text-decoration: none;
 				display: inline-block;
-				font-size: 16px;
+				font-size: 20px;
 				margin: 4px 2px;
 				transition-duration: 0.4s;
 				cursor: pointer;
 			}
 
 			.button1 {
+				font-size: 35px;
 				background-color: transparent;
 				color: white;
 				border: 2px solid transparent;
@@ -37,6 +38,7 @@
 			}
 
 			.button2 {
+				font-size: 25px;
 				background-color: transparent;
 				color: white;
 				border: 2px solid transparent;
@@ -59,14 +61,86 @@
 	</head>
 
 	<body>
-		<button class="button button1">About Me</button>
+		<button class="button button1">Aditya Agarwal</button>
 		<button class="button button2">Experience</button>
-		<h1 style="color: whitesmoke;">Hi, I am Aditya</h1>
-		<img
-			height="200px"
-			src="/assets/images/person.png"
-			alt="Bert Simpson"
-		/>
+		<button class="button button2">Projects</button>
+		<button class="button button2">Achievements</button>
+		<button class="button button2">Community</button>
+		<button class="button button2">Contact</button>
+		<h1 style="color: white; text-align: center;">About Me</h1>
+		<p style="color: white; text-align: center;">
+			I am a student at
+			<a
+				style="color: blue;"
+				href="https://snu.edu.in/home"
+				target="_blank"
+				rel="noopener"
+			>
+				Shiv Nadar University
+			</a>
+			pursuing a Bachelor of Technology degree with a major in Compter
+			Science and a minor in Economics. I will graduate in 2025. I am
+			intrested in data science and competitive programing.
+		</p>
+		<p style="color: white; text-align: center;">
+			Currently I am working on a project to power a bot with only
+			potential energy of water. This is a part of the
+			<a
+				style="color: blue;"
+				href="https://efests.asme.org/competitions/student-design-competition-(sdc)"
+				target="_blank"
+				rel="noopener"
+			>
+				Student Design Challenge
+			</a>
+			hosted by the
+			<a
+				style="color: blue;"
+				href="https://efests.asme.org/competitions/student-design-competition-(sdc)"
+				target="_blank"
+				rel="noopener"
+			>
+				American Society of Mechanical Engineers
+			</a>
+		</p>
+		<p style="color: white; text-align: center;">
+			During my free time you can find me making cooking vlogs, playing
+			basketball or writing poetry. You can check out my
+			<a
+				style="color: blue;"
+				href="https://www.youtube.com/channel/UCmuyfsN7nyP7wWmYcLNNfaA"
+				target="_blank"
+				rel="noopener"
+			>
+				Cooking Channel
+			</a>
+			I am a huge fan of Arijit Singh, Maroon 5, Charlier Puth and Atif Aslam. To better understand my music taste you can check out my most played songs for the year from this
+			<a
+			style="color: blue;"
+			href="https://open.spotify.com/playlist/37i9dQZF1EUMDoJuT8yJsl?si=7328da3c606b47a5"
+			target="_blank"
+			rel="noopener"
+			>
+				playlist
+			</a>
+			In my last, Myers-Briggs personality test, I tested as 
+			<a
+			style="color: blue;"
+			href="https://open.spotify.com/playlist/37i9dQZF1EUMDoJuT8yJsl?si=7328da3c606b47a5"
+			target="_blank"
+			rel="noopener"
+			>
+				ENFP.
+			</a>
+		</p>
+			<img
+				height="200px"
+				src="/assets/images/person.png"
+				alt="Bert Simpson"
+			/>
+		</p>
+
+		<h1 style="color: whitesmoke;">UNDER CONSTRUCTION</h1>
 		<br />
 		<img src="/assets/icons/pen-tool.svg" alt="Pen Tool" />
 	</body>
